--- a/dsc8/package.json
+++ b/dsc8/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --base-href /dsc8-deploy/",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "serve:ssr:dsc8": "node dist/dsc8/server/server.mjs"
